syntax = "proto3";

import "transaction.proto";

message GetBalancesRequest {
  bytes transaction_id = 1;
  int32 height = 2;
  int64 timestamp = 3;
  bytes address = 4;
  bytes asset_id = 5;
}

message Balance {
  bytes address = 1;
  Amount amount = 2;
}

service Balances {
  rpc GetBalances(GetBalancesRequest) returns (stream Balance);
}