syntax = "proto3";
import "transaction.proto";

message DataEntriesByTransactionRequest { bytes transaction_id = 1; }

message DataEntriesByAddressRequest {
  int32 height = 1;
  int64 timestamp = 2;
  bytes address = 3;
  int32 limit = 4;
  bytes after = 5;
  string key = 6;
  int32 type = 7;
  oneof value {
    int64 int_value = 10;
    bool bool_value = 11;
    bytes binary_value = 12;
    string string_value = 13;
  };
}

message DataEntriesSearchRequest {
  int32 height = 1;
  int64 timestamp = 2;
  int32 limit = 3;
  bytes after = 4;
  string key = 5;
  int32 type = 6;
  oneof value {
    int64 int_value = 10;
    bool bool_value = 11;
    bytes binary_value = 12;
    string string_value = 13;
  };
}

message DataEntryResponse {
  bytes address = 1;
  DataTransactionData.DataEntry entry = 2;
}

service DataEntries {
  rpc ByTransaction(DataEntriesByTransactionRequest)
      returns (stream DataEntryResponse);
  rpc ByAddress(DataEntriesByAddressRequest) returns (stream DataEntryResponse);
  rpc Search(DataEntriesSearchRequest) returns (stream DataEntryResponse);
}